--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGODB_URI = "mongodb+srv://shokunbiupgraded:RtSKDJ6AYNOkE0kt@yip.0a9j3xj.mongo
 PORT = "8800"
 
 BASEURL = "/api"
+
+GOOGLE_API_KEY = "AIzaSyDZbHpSwTWNiorgu-wV8WDqDq2qBidE7As"
